# chip8-emulator

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  chip8-emulator.rc
res/: application-icon-macos.icns  version.h.template
snap/: snapcraft.yaml
src/: main.c  version.h
src/chip8/: chip8.h  chip8_do_next.c  chip8_error_opcode.c  chip8_free_cpu.c  chip8_get_offset_instruction.c  chip8_get_opcode.c  chip8_initialize.c  chip8_instruction_00e0.c  chip8_instruction_00ee.c  chip8_instruction_0nnn.c  chip8_instruction_1nnn.c  chip8_instruction_2nnn.c  chip8_instruction_3xkk.c  chip8_instruction_4xkk.c  chip8_instruction_5xy0.c  chip8_instruction_6xkk.c  chip8_instruction_7xkk.c  chip8_instruction_8xy0.c  chip8_instruction_8xy1.c  chip8_instruction_8xy2.c  chip8_instruction_8xy3.c  chip8_instruction_8xy4.c  chip8_instruction_8xy5.c  chip8_instruction_8xy6.c  chip8_instruction_8xy7.c  chip8_instruction_8xye.c  chip8_instruction_9xy0.c  chip8_instruction_annn.c  chip8_instruction_bnnn.c  chip8_instruction_cxkk.c  chip8_instruction_dxyn.c  chip8_instruction_ex9e.c  chip8_instruction_exa1.c  chip8_instruction_fx07.c  chip8_instruction_fx0a.c  chip8_instruction_fx15.c  chip8_instruction_fx18.c  chip8_instruction_fx1e.c  chip8_instruction_fx29.c  chip8_instruction_fx33.c  (+7 more)
src/gui/: gui.h  gui_callback_app_activate.c  gui_callback_chip8_tick.c  gui_callback_chip8_tick_counter.c  gui_callback_chip8_tick_cpu.c  gui_callback_drawing_area_draw.c  gui_callback_drawing_area_new_size.c  gui_callback_header_bar_load_rom.c  gui_callback_header_bar_reset_cpu.c  gui_callback_menu_more_about.c  gui_callback_menu_more_settings.c  gui_callback_sdl_render_screen.c  gui_callback_window_destroy.c  gui_callback_window_key.c  gui_chip8_callback_opcode_error.c  gui_chip8_callback_play_sound.c  gui_emulation_timer_start.c  gui_emulation_timer_stop.c  gui_icon_load_rom.h  gui_icon_reset_cpu.h  gui_icon_settings.h  gui_image_load_from_memory_scale.c  gui_image_load_rom.h  gui_image_load_rom_dark.h  gui_image_load_rom_light.h  gui_image_logo.h  gui_image_more.h  gui_image_more_dark.h  gui_image_more_light.h  gui_image_reset_cpu.h  gui_image_reset_cpu_dark.h  gui_image_reset_cpu_light.h  gui_image_state_dark.h  gui_image_state_light.h  gui_initialize_header_bar.c  gui_initialize_main_header_bar.c  gui_initialize_main_window.c  gui_main_callback_app_activate.c  gui_main_callback_chip8_tick_counter.c  gui_main_callback_chip8_tick_cpu.c  (+31 more)
src/sound/: sound.h  sound_destroy.c  sound_initialize.c  sound_play_buzzer.c
